--- a/du-an.html
+++ b/du-an.html
@@ -323,7 +323,7 @@
 <main>
     <div class="max-w-screen-2xl mx-auto px-4 mb-10">
         <div>
-            <h1 class="text-2xl font-svn-medium font-bold uppercase mb-4">Tin tức sự kiện</h1>
+            <h1 class="text-2xl font-svn-medium font-bold uppercase mb-4">Các Dự án</h1>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8" x-data>
             <template x-for="item in [1,2,3,4,5,6,7,8,9]">
