--- a/tin-tuc-chi-tiet.html
+++ b/tin-tuc-chi-tiet.html
@@ -344,7 +344,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8" x-data>
         <template x-for="item in [1,2,3]">
             <div class="shadow overflow-hidden hover:shadow-xl duration-300">
-                <div class="relative overflow-hidden group aspect-[4/3]">
+                <div class="relative overflow-hidden group image-cover" style="padding-top: 56.25%">
                     <a title="Tiếng Hoa Cho Trẻ Em3: Bắt Đầu Từ Khi Nào Là Tốt Nhất?"
                        href="./tin-tuc-chi-tiet.html">
                         <img class="w-full lozad m-0 lg:group-hover:scale-110 transition-all duration-500 safelyLoadImage"
