update quan he co dong

--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
+                           href="./quan-he-co-dong.html">Quan hệ cổ đông</a>
+                    </li>
+                    <li class="relative group group/lv1">
+                        <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
                            href="./tin-tuc.html">Tin tức</a>
                     </li>
                     <li class="relative group group/lv1">
