--- a/index.html
+++ b/index.html
@@ -131,9 +131,30 @@
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
                            href="./quan-he-co-dong.html">Quan hệ cổ đông</a>
                     </li>
+<!--                    <li class="relative group group/lv1">-->
+<!--                        <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"-->
+<!--                           href="./tin-tuc.html">Tin tức</a>-->
+<!--                    </li>-->
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="./tin-tuc.html">Tin tức</a>
+                           href="https://qlhs.test/khoa-hoc">Tin tức</a>
+                        <div class="inline-block w-1"></div>
+                        <svg class="w-2.5 h-2.5 absolute top-[20px] right-1" aria-hidden="true"
+                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="m1 1 4 4 4-4"></path>
+                        </svg>
+                        <ul class="sub-menu absolute hidden max-w-[260px] min-w-[200px] w-max py-2 rounded bg-white border z-10 group group-hover/lv1:block"
+                            lv="2">
+                            <li class=" relative group border-b last:border-b-0 group/lv2">
+                                <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
+                                   href="./tin-tuc.html">Tin tức sự kiện</a>
+                            </li>
+                            <li class=" relative group border-b last:border-b-0 group/lv2">
+                                <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
+                                   href="./tin-tuyen-dung.html">Tin tuyển dụng</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
