--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="flex justify-between space-x-6 items-center py-2 lg:py-0">
             <div class="items-center flex">
                 <h1 title="Laravel">
-                    <a href="/">
+                    <a href="./index.html">
                         <img class="h-16 w-16 logo-header safelyLoadImage" width="48" height="48" alt="Laravel"
                              onerror="this.onerror=null; this.src='/images/placeholder.jpg';"
                              src="./images/logo5.png">
@@ -70,7 +70,7 @@
                 <ul class="lg:flex flex-wrap menu" lv="1">
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="/">Trang Chủ</a>
+                           href="./index.html">Trang Chủ</a>
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
@@ -104,7 +104,7 @@
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="https://qlhs.test/khoa-hoc">Lĩnh vực hoạt động</a>
+                           href="./index.html">Lĩnh vực hoạt động</a>
                         <div class="inline-block w-1"></div>
                         <svg class="w-2.5 h-2.5 absolute top-[20px] right-1" aria-hidden="true"
                              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -115,11 +115,11 @@
                             lv="2">
                             <li class=" relative group border-b last:border-b-0 group/lv2">
                                 <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="https://qlhs.test/24523454">Xây lắp điện</a>
+                                   href="./index.html">Xây lắp điện</a>
                             </li>
                             <li class=" relative group border-b last:border-b-0 group/lv2">
                                 <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="https://qlhs.test/24523454">Năng lượng</a>
+                                   href="./index.html">Năng lượng</a>
                             </li>
                         </ul>
                     </li>
@@ -131,13 +131,9 @@
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
                            href="./quan-he-co-dong.html">Quan hệ cổ đông</a>
                     </li>
-<!--                    <li class="relative group group/lv1">-->
-<!--                        <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"-->
-<!--                           href="./tin-tuc.html">Tin tức</a>-->
-<!--                    </li>-->
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="https://qlhs.test/khoa-hoc">Tin tức</a>
+                           href="./index.html">Tin tức</a>
                         <div class="inline-block w-1"></div>
                         <svg class="w-2.5 h-2.5 absolute top-[20px] right-1" aria-hidden="true"
                              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -232,7 +228,7 @@
                         <div>
                             <div class="-m-3 px-3 py-2 rounded-md hover:bg-gray-50" x-data="{openNav: false}">
                                 <div class="flex items-center justify-between">
-                                    <a href="https://qlhs.test/khoa-hoc">
+                                    <a href="./index.html">
                                                     <span class="text-sm font-medium text-gray-900">
                                                         Khóa học
                                                     </span>
@@ -251,7 +247,7 @@
                                 </div>
                                 <nav x-show="openNav" class="ml-0 my-1">
                                     <div x-data="{openSubNav: false}">
-                                        <a href="https://qlhs.test/24523454"
+                                        <a href="./index.html"
                                            class="-m-3 px-3 py-2 flex items-center rounded-md hover:bg-gray-50"
                                           >
                                                             <span class="text-sm font-medium text-gray-900 h-8 leading-8">
