--- a/du-an.html
+++ b/du-an.html
@@ -28,16 +28,16 @@
             font-family: 'SVN Gilroy';
             src: url(./fonts/SVN-Gilroy-Regular.otf);
         }
-        @font-face {
-            font-family: 'SVN Gilroy';
-            src: url(./fonts/SVN-Gilroy-Medium.otf);
-            font-weight: 500;
-        }
-        @font-face {
-            font-family: 'SVN Gilroy';
-            font-weight: 700 1000;
-            src: url(./fonts/SVN-Gilroy-Bold.otf);
-        }
+        /*@font-face {*/
+        /*    font-family: 'SVN Gilroy';*/
+        /*    src: url(./fonts/SVN-Gilroy-Medium.otf);*/
+        /*    font-weight: 500;*/
+        /*}*/
+        /*@font-face {*/
+        /*    font-family: 'SVN Gilroy';*/
+        /*    font-weight: 700 1000;*/
+        /*    src: url(./fonts/SVN-Gilroy-Bold.otf);*/
+        /*}*/
 
         @font-face {
             font-family: 'SVN Medium';
